# tensorflow-cc-sdk-generator

./: .gitignore  README.md  cmake.template  gen_sdk.sh
example/: CMakeLists.txt
example/app/: CMakeLists.txt
example/app/src/: main.cc
